# Cite-Before-Act-MCP

./: .env.example  .gitignore  CLAUDE.md  README.md  SPACE_README.md  claude_desktop_config.example.json  claude_desktop_config.github.example.json  claude_desktop_config.github.remote.example.json  index.html  pyproject.toml  requirements.txt  setup.py  setup_wizard.py
cite_before_act/: __init__.py  approval.py  approval_messages.py  debug.py  detection.py  explain.py  local_approval.py  middleware.py
cite_before_act/slack/: __init__.py  client.py  handlers.py
cite_before_act/teams/: __init__.py  adapter.py  client.py  handlers.py
cite_before_act/webex/: __init__.py  client.py  handlers.py
config/: __init__.py  settings.py
docs/: MULTI_PLATFORM_APPROVALS.md  TEAMS_SETUP.md  WEBEX_SETUP.md  advanced-usage.md  approval-methods.md  architecture.md  claude-desktop-setup.md  configuration.md  detection.md  development.md  installation.md  slack-setup.md  testing.md  upstream-servers.md
docs/examples/: github-example.md
examples/: github_mcp_example.md  library_usage.py  slack_webhook_example.py  slack_webhook_server.py  standalone_server.py  unified_webhook_server.py
scripts/: check_webex_webhook.py  create_webex_webhook.py  start_ngrok_with_webhooks.py
server/: __init__.py  main.py  proxy.py
